added more styles

--- a/SelahSeries/Views/Home/About.cshtml
+++ b/SelahSeries/Views/Home/About.cshtml
@@ -32,7 +32,7 @@
         <div class="text">
             <h3 style="color:darkred; text-align: center; margin-bottom:20px"><b>Selah Series</b></h3>
             <p style="color:black; text-align:center; line-height:1.70">Welcome, the Lord bless you.</p>
-            <p class="mb-5" style="color:black; text-align:center; line-height:1.70">
+            <p class="mb-4" style="color:black; text-align:center; line-height:1.70">
                 The SELAH Series is one of the components of the GRAY HAIR MINISTRIES. This vision
                 seeks to reach out to people across various age groups with principal focus on love,
                 relationships and marriages. In addition, SELAH Series discusses faith, social, political,
@@ -46,7 +46,7 @@
                 this website as useful and rewarding. SHALOM!!
             </p>
 
-            <p style="text-align:center"><a href="~/Home/About/Read_More" class="read_more_btn">Read More</a></p>
+            <p style="text-align:center"><a href="~/About/Read_More" class="read_more_btn">Read More</a></p>
         </div>
     </div>
 </div>
