--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                                 <a class="nav-link" href="~/Home/Index">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="~/Home/About">About</a>
+                                <a class="nav-link" href="~/About">About</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -87,7 +87,7 @@
                                 <a class="nav-link" href="#">Books</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="~/Home/Contact">Contact</a>
+                                <a class="nav-link" href="~/Contact">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -133,11 +133,11 @@
                         <div class="col-md-3 col-sm-6 col-6 mb-3 p-0 float-left text-center">
                             <h4 class="font-weight-bold text-uppercase">Quick Links</h4>
                             <ul class="list-group">
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Send_Message">Support/Counselling</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/Support/Send_Message">Support/Counselling</a></li>
                                 @*<li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Index">Support Links</a></li>*@
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Home/About">About us</a></li>
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Home/Contact">Contact us</a></li>
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Books/Index">Books</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/About">About us</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/Contact">Contact us</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/Books/Index">Books</a></li>
                             </ul>
                         </div>
 
@@ -163,11 +163,7 @@
 
                     </div>
 
-                    @*<div class="col-md-12">
-                            <div class="py-4 d-flex justify-content-center align-items-center">
-                                <p style="color:white">Copyright &copy; <script>document.write(new Date().getFullYear());</script></p>
-                            </div>
-                    </div>*@
+        
                 </div>
 
 
@@ -199,11 +195,11 @@
                         <div class="col-md-6 col-sm-6 col-6 mb-3 p-0 float-left text-center">
                             <h4 class="font-weight-bold text-uppercase">Quick Links</h4>
                             <ul class="list-group">
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Send_Message">Support/Counselling</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/Support/Send_Message">Support/Counselling</a></li>
                                 @*<li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Index">Support Links</a></li>*@
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Home/About">About us</a></li>
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Home/Contact">Contact us</a></li>
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Books/Index">Books</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/About">About us</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/Contact">Contact us</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/Books/Index">Books</a></li>
                             </ul>
                         </div>
                     </div>
@@ -288,7 +284,7 @@
     }
 
     .topnav a:hover {
-        border-bottom: 3px solid red;
+        border-bottom: 3px solid #ec517f;
     }
     
     .topnav a:active{
@@ -333,15 +329,10 @@
         line-height: 1.375;
         font-weight: 400;
         color: white;
+        margin-bottom: .5rem;
     }
 
-    /*h5 {
-        font-size: 1rem;
-        line-height: 1.375;
-        font-family: Rubik,Arial,sans-serif;
-        font-weight: 500;
-        color: white;
-    }*/
+  
 
     footer a {
         color: #f2ba16;
@@ -364,19 +355,8 @@
         margin-right: 18px;
     }
 </style>
-<script>
-    // Add active class to the current button (highlight it)
-    //var header = document.getElementById("navDiv");
-    //var btns = header.getElementsByClassName("nav-item");
-    //for (var i = 0; i < btns.length; i++) {
-    //    btns[i].addEventListener("click", function () {
-    //        var current = document.getElementsByClassName("active");
-    //        current[0].className = current[0].className.replace(" active", "");
-    //        this.className += " active";
-    //    });
-    //}
-    
-    
+@*<script>
+  
      
         $(function () {
             $('nav a[href="/' + location.pathname.split("/")[1] + '/' + location.pathname.split("/")[2] + '"]').parents('li').addClass('active');
@@ -385,4 +365,4 @@
         
     
 
-</script>
+</script>*@
