--- a/SelahSeries/wwwroot/NewFolder2/ministers/style.css
+++ b/SelahSeries/wwwroot/NewFolder2/ministers/style.css
@@ -146,8 +146,8 @@ section {
         }
 
         .frontside .card .card-body img {
-            width: 90%;
-            height: 197px;
+            width: 71%;
+            height: 12em;
             border-radius: 50%;
         }
 .support_head {
