--- a/SelahSeries/Views/Support/Index.cshtml
+++ b/SelahSeries/Views/Support/Index.cshtml
@@ -28,7 +28,7 @@
     </div>
 </div>
 
-<div>
+<div class="team_div">
     <!-- Team -->
     <section id="team" class="pb-5 containee">
         <div class="container site overlay" >
@@ -279,7 +279,6 @@
     }
   
     .site {
-        padding: 0px 25px 40px 25px;
         background-size: cover;
         background-repeat: repeat;
         background-position: center;
@@ -287,6 +286,8 @@
 
         .site.overlay {
             position: relative;
+            padding-left: 20px;
+            padding-right: 20px;
         }
 
             .site.overlay:before {
@@ -301,22 +302,15 @@
         padding-left: 26px;
         padding-right: 26px;
     }
-    /*.card-body{
-        padding: 0px;
-        padding-top: 0px;
-        padding-left: 0px;
-    }*/
+    .containee {
+        position: relative;
+        margin-top: -45px;
+        width: 86%;
+        margin-left: auto;
+        margin-right: auto;
+    }
     .backside .card-body {
         margin: 18px 20px 0px 20px;
     }
 
-    /*#team {
-        background-image: url('../new/yellow-sunflower-in-clear-glass-vase-3823839 (1).jpg');
-        opacity: 0.2;
-    }*/
-    /*.containee {
-        position: relative;
-        overflow: hidden;
-    }
-        .containee::before { content: ' '; display: block; position: absolute; left: 0; top: 0; width: 100%; height: 100%; right: 0px; bottom: 0px;  opacity: 0.8; background-image: url("/NewFolder2/new/joanna-kosinska-P9oOLKNhIYU-unsplash.jpg"); background-repeat: no-repeat; background-position: 50% 0; background-size: cover; } .ministers{ position: relative; }*/
 </style>
