--- a/SelahSeries/wwwroot/NewFolder2/styles/post.css
+++ b/SelahSeries/wwwroot/NewFolder2/styles/post.css
@@ -617,7 +617,7 @@ section
 	margin: 0 auto;
 }
 .post_category {
-    width: auto;
+    width: fit-content;
     height: auto;
     
    
@@ -626,20 +626,20 @@ section
 }
     .post_category a {
         background: #ad001c;
-        width: auto;
+        width: fit-content;
         height: auto;
         display: block;
-        line-height: 28px;
+        /* line-height: 28px; */
         font-family: 'Ubuntu', sans-serif;
-        font-size: 1em;
-        padding: 10px;
+        font-size: .8em;
+        padding: 4px 16px 4px 16px;
         border-radius: 14px;
         color: rgba(255,255,255,1);
         text-transform: uppercase;
     }
 .post_category:hover
 {
-	background: rgba(255,255,255,1);
+	
 }
 .post_category:hover a
 {
@@ -647,13 +647,14 @@ section
 }
 .post_title {
     background-color: rgba(0,0,0,0.5);
-    padding: 5px;
-    border-radius: 14px;
-    font-size: 2.0em;
+    padding: 10px 18px 10px 18px;
+    border-radius: 17px;
+    font-size: 1.5em;
     letter-spacing: 0.05em;
-    color: #FFFFFF;
-    font-weight: 600;
-    margin-top: 19px;
+    color: #f2ba16;
+    font-weight: 400;
+    width: fit-content;
+    margin: 20px auto;
 }
 .custom_nav_container
 {
@@ -824,14 +825,7 @@ section
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
 }
-.fa-facebook
-{
-	color: #3b5999;
-}
-.fa-twitter
-{
-	color: #55acee;
-}
+
 .fa-google
 {
 	color: #dd4b39;
@@ -853,6 +847,7 @@ section
 	padding-bottom: 45px;
 	background: #FFFFFF;
 	border-radius: 6px;
+    text-align: justify;
 }
 .post_p
 {
@@ -1241,7 +1236,7 @@ section
 
 .reply_button {
     width: 76px;
-    height: 28px;
+  
     background: #ffffff;
     color: #007bff;
     border: #007bff 1px solid;
@@ -1557,7 +1552,7 @@ section
 .side_post_content
 {
 	padding-left: 20px;
-	margin-top: -5px;
+	margin-top: 0px;
 }
 .side_post_title
 {
