--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 }
 
 <div id="carouselExampleIndicators" class="home carousel slide" style="margin: 0px; padding:0px" data-ride="carousel">
-    <ol class="carousel-indicators" style="bottom:0px">
+    <ol class="carousel-indicators" style="bottom:0px; width:75%">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -84,16 +84,65 @@
 <div class="container containe">
 
     <div class="imagee row" style="height:150px; margin-bottom:40px">
-        <div class=" col-sm-12  col-12 text-center" >
-            <img style="height:150px" src="~/NewFolder2/new/middl selah.png" alt="image"/>
+        <div class=" col-sm-12  col-12 text-center">
+            <img style="height:150px" src="~/NewFolder2/new/middl selah.png" alt="image" />
 
         </div>
     </div>
-   
-</div>
 
-@{ViewData["Search"] = "all";}
-@await Html.PartialAsync("SearchPartial")
+    <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-3">
+            <div class="card2">
+
+                <img src="/NewFolder2/new/brigitte-tohm-XyGeWTj2E7w-unsplash.jpg" alt="Avatar">
+                <div class="container2">
+                    <h4>Interested in articles on Relationship and Marriage?</h4>
+                    <p><a href="~/?category=relationship_and_marriage#blog">See here</a></p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-sm-6 col-md-6 col-lg-3">
+            <div class="card2">
+                <img src="/NewFolder2/new/kakudmi-JO19K0HDDXI-unsplash (1).jpg" alt="Avatar">
+                <div class="container2">
+                    <h4>Need latest news on sports?</h4>
+                    <p><a href="~/?category=sports#blog">See here</a></p>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="col-sm-6 col-md-6 col-lg-3">
+            <div class="card2">
+
+                <img src="/NewFolder2/new/jacalyn-beales-geRpPjIiu8U-unsplash.jpg" alt="Avatar ">
+                <div class="container2">
+                    <h4>Do you want to read about having a fulfilling career?</h4>
+                    <p><a href="~/?category=career#blog">See here</a></p>
+                </div>
+            </div>
+
+        </div>
+
+
+
+        <div class="col-sm-6 col-md-6 col-lg-3">
+            <div class="card2">
+                <img src="/NewFolder2/new/lucia-48UaeIMNAA4-unsplash (2).jpg" alt="Avatar">
+                <div class="container2">
+                    <h4>Are you interested in politics?</h4>
+                    <p><a href="~/?category=politics#blog">See here</a></p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
 
 
 <div id="blog">
@@ -246,57 +295,11 @@
                                 }
 
 
-
-
-                                @*<!-- Small Card Without Image -->
-                                <div class="card card_default card_small_no_image grid-item">
-                                    <div class="card-body">
-                                        <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
-                                        <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
-                                    </div>
-                                </div>
-
-                                <!-- Small Card With Background -->
-                                <div class="card card_default card_small_with_background grid-item">
-                                    <div class="card_background" style="background-image:url(/NewFolder2/images/post_4.jpg)"></div>
-                                    <div class="card-body">
-                                        <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
-                                        <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
-                                    </div>
-                                </div>
-
-                                <!-- Small Card With Image -->
-                                <div class="card card_small_with_image grid-item">
-                                    <img class="card-img-top" src="/NewFolder2/images/post_2.jpg" alt="https://unsplash.com/">
-                                    <div class="card-body">
-                                        <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
-                                        <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
-                                    </div>
-                                </div>
-
-                                <!-- Small Card With Image -->
-                                <div class="card card_small_with_image grid-item">
-                                    <img class="card-img-top" src="/NewFolder2/images/post_3.jpg" alt="https://unsplash.com/">
-                                    <div class="card-body">
-                                        <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
-                                        <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
-                                    </div>
-                                </div>*@
-
-
-
-
-
                             </div>
                         </div>
                     </div>
 
                 </div>
-
-
-                @*<div class="load_more">
-                        <div id="load_more" class="load_more_button text-center trans_200"><a href="~/blog/category">View More</a></div>
-                    </div>*@
 
             </div>
 
@@ -843,7 +846,7 @@
 
     .containe {
         background-color: #F2F2F2;
-        padding: 50px 62px;
+        padding: 50px 0px;
     }
 
     .books .carousel-inner {
