--- a/SelahSeries/Views/Blog/post.cshtml
+++ b/SelahSeries/Views/Blog/post.cshtml
@@ -15,6 +15,7 @@
 
 @section AddToHead {
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/post.css">
+    
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/responsive.css">
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/post_responsive.css">
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/more_styles.css">
@@ -124,8 +125,8 @@
                             </div>
                         </div>
 
-                        <!-- Similar Posts -->
-                        <div class="similar_posts">
+                        <!-- Similar Posts Before-->
+                        <div class="similar_posts before">
                             <div class="grid clearfix">
 
                                 @foreach (var item in Model.RelatedPosts)
@@ -148,10 +149,15 @@
 
                             </div>
                         </div>
+
                         <div>
                             <!-- Post Comment -->
                             <div class="post_comment">
                                 <div class="post_comment_title">Post Comment</div>
+                                @if (!(Model.Post.Comments.Count() > 0))
+                                {
+                                    <div style="font-family: 'Ubuntu', sans-serif; font-size: 14px; font-weight: 700; color: #007bff; margin-top:20px;"> Be the first to comment on this post </div>
+                                }
                                 <div class="row">
                                     <div class="col-xl-9">
                                         <div class="post_comment_form_container">
@@ -169,11 +175,11 @@
 
                             <!-- Comments -->
                             <div class="comments">
-                                @if (!(Model.Post.Comments.Count() > 0))
-                                {
-                                    <div style="text-align:center; margin:5px 5px 40px 5px;" class="comments_title"> Be the first to comment on this post </div>
-                                }
-                                else
+                                @*@if ((Model.Post.Comments.Count() > 0))
+                                    {
+                                        <div style="text-align:center; margin:5px 5px 40px 5px;" class="comments_title"> Be the first to comment on this post </div>
+                                    }*@
+                                @if ((Model.Post.Comments.Count() > 0))
                                 {
                                     <div class="comments_title">Comments <span>@Model.Post.Comments.Where(c => c.ParentCommentId == null).Count()</span></div>
 
@@ -229,8 +235,33 @@
 
                             </div>
                         </div>
+
+                        <!-- Similar Posts After-->
+                        <div class="similar_posts after">
+                            <div class="grid clearfix">
+
+                                @foreach (var item in Model.RelatedPosts)
+                                {
+                                    @if (item.PostId != Model.Post.PostId)
+                                    {
+                                        <div class="card card_small_with_image grid-item">
+                                            <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
+                                            <div class="card-body">
+                                                <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
+                                                <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
+                                            </div>
+                                        </div>
+                                    }
+
+                                }
+
+
+
+
+                            </div>
+                        </div>
                     </div>
-                    
+
                 </div>
 
                 <!-- Sidebar -->
@@ -251,6 +282,8 @@
                                                  width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12" xml:space="preserve">
                                             <polyline fill="#bebebe" points="0,5.61 5.609,0 7,0 7,1.438 2.438,6 7,10.563 7,12 5.609,12 -0.002,6.39 " />
 
+
+
                                         </div>
                                         <ul id="custom_dots" class="custom_dots custom_dots_top">
                                             <li class="custom_dot custom_dot_top active"><span></span></li>
@@ -262,6 +295,10 @@
                                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                                  width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12" xml:space="preserve">
                                             <polyline fill="#bebebe" points="6.998,6.39 1.389,12 -0.002,12 -0.002,10.562 4.561,6 -0.002,1.438 -0.002,0 1.389,0 7,5.61 " />
+
+
+
+
 
 
 
@@ -307,15 +344,15 @@
                             </div>
                         </div>
 
-<style>
-    .facebook {
-        color: #3b5999;
-    }
+                        <style>
+                            .facebook {
+                                color: #3b5999;
+                            }
 
-    .twitter {
-        color: #55acee;
-    }
-</style>
+                            .twitter {
+                                color: #55acee;
+                            }
+                        </style>
 
 
 
@@ -327,3 +364,71 @@
         </div>
     </div>
 </div>
+
+<style>
+    .after {
+        display: none;
+    }
+    .search_container form {
+        display: inline-block;
+        position: relative;
+    }
+
+    .header_search_input {
+        display: inline-block;
+        width: 262px;
+        height: 46px;
+        background: #4177b0;
+        border: none;
+        outline: none;
+        border-radius: 5px;
+        padding-left: 49px;
+        color: white;
+    }
+
+        .header_search_input::-webkit-input-placeholder {
+            font-family: 'Ubuntu', sans-serif;
+            font-size: 14px !important;
+            font-weight: 400 !important;
+            color: rgba(255,255,255,0.5) !important;
+        }
+
+        .header_search_input:-moz-placeholder {
+            font-family: 'Ubuntu', sans-serif;
+            font-size: 14px !important;
+            font-weight: 400 !important;
+            color: rgba(255,255,255,0.5) !important;
+        }
+
+        .header_search_input::-moz-placeholder {
+            font-family: 'Ubuntu', sans-serif;
+            font-size: 14px !important;
+            font-weight: 400 !important;
+            color: rgba(255,255,255,0.5) !important;
+        }
+
+        .header_search_input:-ms-input-placeholder {
+            font-family: 'Ubuntu', sans-serif;
+            font-size: 14px !important;
+            font-weight: 400 !important;
+            color: rgba(255,255,255,0.5) !important;
+        }
+
+        .header_search_input::input-placeholder {
+            font-family: 'Ubuntu', sans-serif;
+            font-size: 14px !important;
+            font-weight: 400 !important;
+            color: rgba(255,255,255,0.5) !important;
+        }
+
+    .header_search_icon {
+        position: absolute;
+        top: 50%;
+        left: 25px;
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+</style>
