--- a/SelahSeries/Views/Home/Contact.cshtml
+++ b/SelahSeries/Views/Home/Contact.cshtml
@@ -20,6 +20,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 offset-lg-3">
+                        @await Html.PartialAsync("AlertViewPartial")
                         <!-- Post Comment -->
                         <div class="post_comment">
                             <div class="contact_form_container" style="margin-bottom:40px">
