--- a/SelahSeries/Views/BlogMgt/Index.cshtml
+++ b/SelahSeries/Views/BlogMgt/Index.cshtml
@@ -9,6 +9,7 @@
 }
 <div style="color: #ffcc00; background-color:black;" class="jumbotron text-center">
     <h1>Blog Content Management Page <br /> (List of Posts)</h1>
+    <h4> <a class="btn" href="~/blogmgt/signout"> SIGN OUT </a> </h4>
     <p> Add, Delete, Edit, Archive Blog Posts Here...</p>
 </div>
 
